<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="ad_description">ad</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_text">Not registered yet?</string>
    <string name="emptyAuth">Login or Password not filled in</string>
    <string name="incorrect_auth">incorrect login or password</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="close_button">Close</string>
    <string name="match_passwords">Password must match</string>
    <string name="emptyRegister">Fields are empty</string>
    <string name="avatar">Avatar</string>
    <string name="job">Job</string>
    <string name="edit">Edit</string>
    <string name="dash">–</string>
    <string name="attachment">Attachment</string>
    <string name="date_of_event">Data of event</string>
    <string name="type_of_event">Type of event</string>
    <string name="play_pause_stop">Play/pause/stop</string>
    <string name="play">Play</string>
    <string name="description_full_screen_image">Description full screen image</string>
    <string name="authorization">authorization</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>
    <string name="link">Link</string>
    <string name="add_image">Image</string>
    <string name="clear_image">Clear image</string>
    <string name="create_post">Create</string>
    <string name="position">Position</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="add_event">Add event</string>
    <string name="empty_date">Field is empty</string>
    <string name="invalid_link">Invalid link</string>
    <string name="jobs">Jobs</string>
    <string name="add_job">Add job</string>
    <string name="empty_jobs">Empty jobs</string>
    <string name="user">User</string>
</resources>