<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.event.FeedFragment">

    <ImageView
        android:id="@+id/feed_avatar"
        android:layout_width="@dimen/area12x"
        android:layout_height="@dimen/area12x"
        android:layout_margin="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/area4x"
        android:contentDescription="@string/avatar"
        android:padding="@dimen/area2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/feed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/feed_avatar"
        app:layout_constraintStart_toEndOf="@id/feed_avatar"
        app:layout_constraintTop_toTopOf="@id/feed_avatar"
        tools:text="Ivan Ivanov" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/feed_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="feed_avatar, feed_name" />

    <ImageView
        android:id="@+id/menu_auth"
        android:layout_width="@dimen/area12x"
        android:layout_height="@dimen/area12x"
        android:layout_margin="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/area4x"
        android:contentDescription="@string/authorization"
        android:padding="@dimen/area1x"
        android:src="@drawable/ic_menu_open_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="@dimen/icon_button_min_size"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:padding="@dimen/area1x"
        android:contentDescription="@string/users"
        android:src="@drawable/ic_exit_to_app_24"
        app:layout_constraintEnd_toStartOf="@id/fab"
        app:layout_constraintTop_toTopOf="@id/fab" />

    <ImageView
        android:id="@+id/fab"
        android:layout_width="@dimen/icon_button_min_size"
        android:layout_height="@dimen/icon_button_min_size"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:contentDescription="@string/add_post"
        android:src="@drawable/ic_add_box_24"
        app:layout_constraintBottom_toBottomOf="@id/feed_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/feed_avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="feed_group, menu_auth, fab" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorGravity="stretch"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/cardview_shadow_start_color"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>