<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/area24x"
        android:layout_height="@dimen/area24x"
        android:layout_marginStart="@dimen/common_spacing"
        android:scaleType="centerCrop"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/icon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintBottom_toTopOf="@id/icon_job"
        android:padding="@dimen/area2x"
        app:srcCompat="@drawable/ic_face_24"
        android:contentDescription="@string/job" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/icon_name"
        app:layout_constraintStart_toEndOf="@id/icon_name"
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        tools:text="@string/name" />

    <ImageView
        android:id="@+id/icon_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        android:padding="@dimen/area2x"
        app:srcCompat="@drawable/ic_work_24"
        android:contentDescription="@string/job" />

    <TextView
        android:id="@+id/title_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/title_work"
        app:layout_constraintStart_toEndOf="@id/icon_job"
        app:layout_constraintTop_toBottomOf="@id/icon_name"
        tools:text="Teacher"/>

    <TextView
        android:id="@+id/title_work_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        app:layout_constraintStart_toEndOf="@id/icon_job"
        app:layout_constraintTop_toBottomOf="@id/title_work"
        tools:text="Netology"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_avatar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_post" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>